tests/snapshots/snapshot__excessive_permissions.snap
---
source: tests/snapshot.rs
expression: "zizmor().workflow(workflow_under_test(\"excessive-permissions/issue-336-repro.yml\")).run()?"
snapshot_kind: text
---
No findings to report. Good job! (1 suppressed)
