tests/snapshots/snapshot__ref_confusion-2.snap
---
source: tests/snapshot.rs
expression: "zizmor().workflow(workflow_under_test(\"ref-confusion/issue-518-repro.yml\")).offline(false).run()?"
---
No findings to report. Good job! (1 suppressed)
