tests/snapshots/snapshot__secrets_inherit.snap
---
source: tests/snapshot.rs
expression: "zizmor().workflow(workflow_under_test(\"secrets-inherit.yml\")).run()?"
snapshot_kind: text
---
warning[secrets-inherit]: secrets unconditionally inherited by called workflow
 --> @@INPUT@@:7:5
  |
7 |     uses: octo-org/example-repo/.github/workflows/called-workflow.yml@main
  |     ---------------------------------------------------------------------- this reusable workflow
8 |     # NOT OK: unconditionally inherits
9 |     secrets: inherit
  |     ---------------- inherits all parent secrets
  |
  = note: audit confidence → High

1 finding: 0 unknown, 0 informational, 0 low, 1 medium, 0 high
